--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "jnalencar",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "path": "^0.12.7",
     "target": "file:"
   }
 }
